--- a/course/bsc-bioinformation-course.html
+++ b/course/bsc-bioinformation-course.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Sc Bioinformatics details, Admission, Colleges, Career | Eduprov</title>
+  <title>B.Sc Bioinformatics Admission Eligibility Scope | Eduprov</title>
   <meta name="description" content="BSc Bioinformatics is a course where biology & information technology meet. Get all updates about the top colleges, admission, syllabus, fees & much more.
     ">
   <meta name="keywords"
     content="">
   <meta name="author" content="Naveen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -21,7 +21,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </head>
 
@@ -42,7 +41,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
             <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
             <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
         </div>
@@ -55,6 +54,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -69,13 +69,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -84,7 +82,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
-            B.Sc. Bioinformatics or Bachelor of Science in Bioinformatics is a three-year undergraduate degree. Bioinformatics is a course of bioscience that applies statistics to molecular biology. Bioinformatics helps to understand the biological data with the help of the software tools. The main purpose of this course is to increase the understanding of biological processes. It focuses on developing and applying intensive techniques such as pattern recognition, data mining, machine learning algorithms, and visualization.
+            <b>B.Sc Bioinformatics or Bachelor of Science in Bioinformatics</b> is a three-year undergraduate degree. Bioinformatics is a course of bioscience that applies statistics to molecular biology. Bioinformatics helps to understand the biological data with the help of the software tools. The main purpose of this course is to increase the understanding of biological processes. It focuses on developing and applying intensive techniques such as pattern recognition, data mining, machine learning algorithms, and visualization.
         </p>
 
         <p class="text-justify" id="paragraph-font">
@@ -100,31 +98,27 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">    
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
-        <label><b>The minimum eligibility for this course is a 10+2 with science subjects such as Biology, Maths & Chemistry.</b></label>
+      <div class="col-md-12 mt-2">
+        <label>The minimum eligibility for this course is a 10+2 with science subjects such as Biology, Maths & Chemistry.</label>
         <p class="text-justify" id="paragraph-font">
-            Certain universities and institutions conduct an entrance exam for admission. The information about the institutions that offer this course along with the admission procedure can be obtained from the experts of EDUPROV who are waiting to help you. The highly dedicated professionals will guide you in each and every process and will help you to get into the course.
+            Certain universities and institutions conduct an entrance exam for admission. The information about the institutions that offer this course along with the admission procedure can be obtained from the experts of  <b>EDUPROV</b> who are waiting to help you. The highly dedicated professionals will guide you in each and every process and will help you to get into the course.
         </p>
 
         <hr />
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
             The scope for Bioinformatics is good and wide. Most of the professionals are employed in fields such as biotechnology, biomedical sciences, and pharmaceutical companies. Graduates can work in the Government and Private Hospitals. Candidates can also opt for education in universities and colleges. Some top companies are hiring professionals in Bioinformatics such as Wipro, Reliance, Tata Consultancy Services, IBM Life Sciences, etc.
         </p>
@@ -134,16 +128,8 @@
         
         <hr />
       </div>
-
-      <!--Table start-->
-
-      <!--Table End-->
     </div>
   </div>
-
-  <!--Course End-->
-
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -153,19 +139,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -243,22 +232,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
