--- a/bsc-in-biology.html
+++ b/bsc-in-biology.html
@@ -2,99 +2,108 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Biology Admission Eligibility Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc Biology deals with branches of science like chemistry, botany, zoology. Get information on admission, eligibility, counseling, top colleges visit EDUPROV">
-  <meta name="keywords"
-    content="what is the meaning of biology, what is the biology, what is meaning of biology, what is biology, what is biological,   syllabus in biology, science for high school, courses on biology, courses in biology, bangalore admission on biology, bangalore admission of biology class 11, ncert biology class 12, ncert biology class 11 course bangalore, meaning of biology, meaning of biologist, meaning of bio, major in biology, important biology courses, high school biology   syllabus, high school biology, gk in biology, gk biology in admission, gk biology, definitions of biology, definitions in biology, definition of biology, definition biology, classes biology, bangaloreabout biology, course bangalore of biology, biology   syllabus high school, biology   syllabus for project, biology   syllabus for high school, biology   syllabus, biology   course bangalore for class xi, biology   course bangalore, biology subjects high school, biology science, biology courses courses, biology courses, biology courses in admission, biology courses and answers, biology courses, biology course in admission, biology course and answer, biology course, biology project   syllabus, biology bangalore admission for class 11, biology bangalore admission class 11, biology bangalore admission, biology note, biology meaning, biology major courses, biology major, biology in admission, biology admission gk, biology admission, biology high school, बीएससी biology, what is biological sciences, syllabus zoology, subjects in bsc biology, subjects in bsc, subjects in b.sc biology, subject of bsc, job biology, courses in bsc biology, careers in biology, career in biology, bsc zoology syllabus, bsc syllabus 1st year, bsc subjects, bsc subject, bsc in biology subjects, bsc in biology, bsc courses, bsc course, bsc course bangalores, b.sc subjects, b.sc subject, b.sc courses, b.sc course, b.sc bangalorefor  admission in bangalore, b.sc bangalore2021, b.sc course bangalore 2021, b sc subjects, b sc subject, b sc,">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-in-biology.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BSc Biology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-in-biology.html"
+      },
+      "headline": "BSc Biology Admission Guidance in Bangalore",
+      "description": ""B.Sc Biology or Bachelor of Science in Biology is an undergraduate degree course of 3years.
+      Biolog is the combination of Botany and Zoology as we all know as we heard that right from
+      our school days.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-06",
+      "dateModified": "2021-08-06"
+    }
+    </script>
+  <meta name="description" content="B.Sc Biology or Bachelor of Science in Biology is an undergraduate degree course of 3years.
+  Biolog is the combination of Botany and Zoology as we all know as we heard that right from
+  our school days. ">
+  <meta name="keywords" content=" bsc from biology,bsc biology,bsc biology subjects,bsc biological sciences,bsc bio,biology honours,bsc marine biology,bsc biology courses,bsc human biology,bsc molecular biology,bsc cancer biology,bsc hons biology,bsc biology subjects for first year,bsc courses for biology students,bsc biology colleges,courses after bsc biology,best bsc course for biology students,bsc biology subjects list,biology bsc courses list,bsc biology admission,bsc biology courses list,bsc courses list for biology students,bsc courses after 12th science biology,bsc biology honours,biology honours subjects,biology bsc 1st year,bsc biology admission 2020,bhu bsc bio,after bsc biology,diploma courses after bsc biology,bsc subjects in biology,bsc 1st year biology,bsc wildlife biology,wits bsc biological sciences,bsc agriculture without biology,bsc courses related to biology,bsc biological sciences up,bsc hons biological science,biology with foundation year,bsc subjects for biology students,bsc for bio students,medical courses after bsc biology,bsc biology fees,best course after bsc biology,bsc courses in biology after 12th,bsc biology 1st year subjects,bsc biology course details,bsc biological science requirements,bsc cell biology,best courses in bsc for biology students,cell biology bsc 1st year,honours in biology,bsc in biology colleges,b sc courses for biology students,bsc evolutionary biology,bsc subjects biology,b sc biological science,subjects of bsc biology,bsc courses biology,bsc applied biology,bsc biodiversity and conservation biology,b sc marine biology,honours in biochemistry,bsc hons biology subjects,after bsc biology course,bsc biology duration,bsc biology honours subjects,bsc of biology,bsc bio general,bhu bsc bio seats,after bsc in biology,bsc in wildlife biology,subjects in bsc biology honours,bsc first year bio,bsc 2nd year biology,bsc biological sciences subjects,biological sciences with foundation year,bsc computational biology,subjects in bsc biology 1st year,bsc biology related courses,bsc bio hons,colleges for bsc biology,bsc computer science for biology students,bsc biological and agricultural sciences,bsc biological science subjects,subjects for bsc biology,up bsc biological sciences,bhu bsc bio entrance result 2020,bsc biology degree,courses in bsc for biology students,biological science foundation year,bsc 1st year zoology classes,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BSc Biology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-in-biology.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="B.Sc Biology or Bachelor of Science in Biology is an undergraduate degree course of 3years.
+    Biolog is the combination of Botany and Zoology as we all know as we heard that right from
+    our school days." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="BSc Biology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="B.Sc Biology or Bachelor of Science in Biology is an undergraduate degree course of 3years.
+    Biolog is the combination of Botany and Zoology as we all know as we heard that right from
+    our school days." />
+  <meta name="twitter:image" content="# />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Sc Biology</h1>
-        </div>
-      </div>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course Information
-        </h2>
-      </div>  <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Biology</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -133,7 +142,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -158,7 +167,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
